modules/nexus/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus
  namespace: kube-devops
  labels:
    app: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 2000
      containers:
      - image: sonatype/nexus3
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            readOnly: false
            name: nexus-data-volume
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: nexus-home
